WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
65253
Fix Qt (and possibly Gtk) WebKit2 build after addition of -webkit-pictograph
https://bugs.webkit.org/show_bug.cgi?id=65253
Summary
Fix Qt (and possibly Gtk) WebKit2 build after addition of -webkit-pictograph
Caio Marcelo de Oliveira Filho
Reported
2011-07-27 06:29:39 PDT
Fix Qt (and possibly Gtk) WebKit2 build after addition of -webkit-pictograph
Attachments
Patch
(1.38 KB, patch)
2011-07-27 06:30 PDT
,
Caio Marcelo de Oliveira Filho
kling
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Caio Marcelo de Oliveira Filho
Comment 1
2011-07-27 06:30:35 PDT
Created
attachment 102140
[details]
Patch
Andreas Kling
Comment 2
2011-07-27 06:33:00 PDT
Comment on
attachment 102140
[details]
Patch r=me
Caio Marcelo de Oliveira Filho
Comment 3
2011-07-27 06:35:20 PDT
M Source/WebKit2/ChangeLog M Source/WebKit2/Shared/WebPreferencesStore.h Committed
r91838
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug