Fix Qt (and possibly Gtk) WebKit2 build after addition of -webkit-pictograph https://bugs.webkit.org/show_bug.cgi?id=65253

Reviewed by Andreas Kling.

The -webkit-pictograph generic family was added by bug 65197.

* Shared/WebPreferencesStore.h:

git-svn-id: svn://svn.chromium.org/blink/trunk@91838 bbb929c8-8fbe-4397-9dbb-9b2b20218538